--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-mysql-connector-python==8.0.22
-protobuf==3.14.0
-six==1.15.0
+Click==7.0
+Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-MySQLdb==0.2.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+mysql-connector-python==8.0.18
+mysqlclient==1.4.6
+protobuf==3.11.2
+six==1.13.0
+Werkzeug==0.16.0
